--- a/src/styles/utility.scss
+++ b/src/styles/utility.scss
@@ -31,8 +31,8 @@ $indent_3: 30px;
   overflow-y: scroll;
 }
 
-.width-250 {
-  width: 250px;
+.width-300 {
+  width: 300px !important;
 }
 
 .width-200 {
@@ -41,14 +41,6 @@ $indent_3: 30px;
 
 .height-200 {
   height: 200px;
-}
-
-.height-220 {
-  height: 220px;
-}
-
-.h-100 {
-  height: 100%;
 }
 
 .w-100 {
@@ -104,7 +96,7 @@ $indent_3: 30px;
 }
 
 .justify-content-between {
-  justify-content: space-between;
+  justify-content: space-between !important;
 }
 
 .justify-content-center {
@@ -146,7 +138,7 @@ $indent_3: 30px;
 }
 
 .font-huge {
-  font-size: 100px;
+  font-size: 100px !important;
 }
 
 .contain-scroll {
@@ -250,4 +242,12 @@ $indent_3: 30px;
 .center {
   margin: 0 auto;
   text-align: center;
+}
+
+.height-300 {
+  height: 300px !important;
+}
+
+.h-100 {
+  height: 100%;
 }
